# rover-repo

./: .gitignore  README.md  blink-led.cpp  read-gps.cpp  read-ultrasonic.cpp
documentation/: comms_structure.md  initial_setup.md  manual_control.md  state_machine_design.md
home-base/: CMakeLists.txt  README.md
home-base/src/: main.cpp
raspberry-pi/: CMakeLists.txt  README.md
raspberry-pi-main/: CMakeLists.txt  README.md
raspberry-pi-main/scripts/: disable-ap.sh  enable-ap.sh  start-client.sh
raspberry-pi-main/src/: main.cpp
raspberry-pi-main/src/sensors/: tinygps.cpp
raspberry-pi-setup/: CMakeLists.txt  README.md
raspberry-pi-setup/src/: setup.cpp
raspberry-pi/examples/: accelerometer_ex.cpp
raspberry-pi/include/: mpu6050.h  tinygps.h  ultrasonic.h
raspberry-pi/libs/sensors/: mpu6050.cpp
raspberry-pi/src/: main.cpp  ultrasonic.cpp
